test/files/neg/trait_fields_deprecated_overriding.check
trait_fields_deprecated_overriding.scala:10: warning: overriding value x in trait DeprecatedOverriding is deprecated
  override val x = 2
               ^
1 warning
error: No warnings can be incurred under -Werror.
